--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,11 @@
 # http://git-scm.com/docs/gitignore
 *~
 *.sw[mnpcod]
-*.log
 *.tmp
 *.tmp.*
 log.txt
 *.sublime-project
 *.sublime-workspace
-npm-debug.log*
 
 # Logs
 logs
@@ -22,3 +20,6 @@ node_modules/
 dist/
 src/browser/plugin.min.js
 www/www.min.js
+
+# IDE
+.idea
